<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#092A3F"
    tools:context=".register">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="168dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/firefly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="68sp"
        android:textColor="@color/white"
        android:text="@string/re"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="62dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <TextView
        android:id="@+id/logo_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/ssources"
        app:layout_constraintStart_toEndOf="@id/text_logo"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/lationnelles"
        app:layout_constraintStart_toEndOf="@id/text_logo"
        app:layout_constraintTop_toBottomOf="@+id/logo_1"/>

    <EditText
        android:id="@+id/input_identifiant"
        android:layout_width="346dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_logo"
        android:background="@drawable/input"
        android:paddingLeft="32dp"
        android:hint="Nom"
        android:autofillHints="Nom"
        tools:ignore="LabelFor"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/input_identifiant2"
        android:layout_width="346dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_identifiant"
        android:background="@drawable/input"
        android:paddingLeft="32dp"
        android:hint="Prénom"
        android:autofillHints="Prénom"
        tools:ignore="LabelFor"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="346dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_identifiant2"
        android:background="@drawable/input"
        android:paddingLeft="32dp"
        android:hint="Mot de passe"
        android:autofillHints="password"
        tools:ignore="LabelFor"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/input_password2"
        android:layout_width="346dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:background="@drawable/input"
        android:paddingLeft="32dp"
        android:hint="Confirmation mot de passe"
        android:autofillHints="password"
        tools:ignore="LabelFor"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/input_mail"
        android:layout_width="346dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password2"
        android:background="@drawable/input"
        android:paddingLeft="32dp"
        android:hint="E-mail"
        android:autofillHints="emailAddress"
        tools:ignore="LabelFor"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/input_mail2"
        android:layout_width="346dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_mail"
        android:background="@drawable/input"
        android:paddingLeft="32dp"
        android:hint="Confirmation E-mail"
        android:autofillHints="emailAddress"
        tools:ignore="LabelFor"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/create_acc_but"
        android:layout_width="346dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:text="@string/confirmer"
        android:onClick="goHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/return_but"
        />

    <Button
        android:id="@+id/return_but"
        android:layout_width="346dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:text="@string/retour"
        android:onClick="goMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>